adding modified files